--- a/stack.yaml
+++ b/stack.yaml
@@ -3,8 +3,7 @@ nix:
   enable: false
   shell-file: shell.nix
 extra-deps:
-- cryptonite-0.24
-- hprotoc-2.4.3
-- secp256k1-0.4.8
-- haskell-src-exts-1.17.1
-resolver: lts-9.4
+- hprotoc-2.4.8
+- sandi-0.4.2
+- secp256k1-0.5.2
+resolver: lts-11.6
