Add generateKeyPair function with trivial tastey-hunit tests

--- a/package.yaml
+++ b/package.yaml
@@ -61,5 +61,8 @@ tests:
     - cereal
     - cryptonite
     - memory
-    - QuickCheck
     - secp256k1
+    - tasty
+    - tasty-quickcheck
+    - QuickCheck
+    - tasty-hunit
